@@ -1,3 +1,7 @@
+2005-09-25  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (EXTRA_DIST): Add new files.
+
 2005-09-25  Conrad T. Pino  <Conrad@Pino.com>
 
 	* filesubr.c: Change <windows.h> to <sys/socket.h> which includes
